# gitlab_in-silico-public_charlie

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  HOW-TO.md  LICENSE  README.md  REFERENCE.md  TODO.md  TUTORIALS.md  investment_combinations.py  server_config.toml
demo/: demo.html
doc/: paper.tex  references.bib
doc/formal/: paper.tex
doc/informal/: paper.tex
examples/: allocate_client.rs  analyze_client.rs  api_client.rs
schema/: index.html  openapi.json  openapi_schema.json
schemas/: allocation_response_schema.json  analysis_response_schema.json  portfolio_candidates_schema.json  portfolio_schema.json
src/: allocation.rs  analysis.rs  api.rs  company.rs  constraints.rs  env.rs  kelly_allocation.rs  lib.rs  main.rs  model.rs  portfolio.rs  scenario.rs  utils.rs  validation.rs
src/allocation/: allocation.rs
src/analysis/: analysis.rs
src/constraints/: capital_loss_constraint.rs  constraint.rs  long_only_constraint.rs  maximum_capital_loss_constraint.rs  maximum_individual_allocation_constraint.rs  maximum_total_leverage_constraint.rs  no_shorting_constraint.rs
src/model/: capital_loss.rs  company.rs  errors.rs  portfolio.rs  responses.rs  result.rs  scenario.rs
src/validation/: result.rs  validate.rs
tests/: integration.rs  test_data.yaml  test_data_with_constraints.yaml
