[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "portfolio"
path = "src/main.rs"

[lib]
name = "portfolio"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
