[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[lib]
name = "portfolio"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
log = "0.4.17"
nalgebra = "0.32.1"
num-traits = "0.2.15"
ordered-float = "3.4.0"
reqwest = {version = "0.11.14", features = ["blocking", "json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
schemars = "0.8.12"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.17"
simple_logger = "4.0.0"
