[package]
name = "charlie"
version = "1.0.1"
edition = "2021"
description = "A software for sizing the bets in a focused portfolio."
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/in-silico-public/charlie"

[lib]
name = "charlie"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
camino = "1.1.4"
clap = { version = "4.3.22", features = ["derive"] }
dropshot = "0.9.0"
h2 = "0.4.2"
http = "0.2.9"
hyper = "0.14.25"
itertools = "0.10.5"
nalgebra = "0.32.1"
num-traits = "0.2.15"
openapiv3 = "=1.0.2"
ordered-float = "3.4.0"
reqwest = {version = "0.11.14", features = ["blocking", "json"] }
schemars = "0.8.12"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "=1.0.94"
serde_yaml = "=0.9.17"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
tokio = { version = "1.26.0", features = ["full"] }
toml = "=0.7.3"
toml_edit = "=0.19.9"
webpki = "0.22.4"
